residentesif y estilos , links

--- a/registroIf.html
+++ b/registroIf.html
@@ -13,7 +13,7 @@
 <body>
   <nav class="navbar navbar-dark bg-dark">
     <img src="img/LOGO_If.png" alt="">
-    <i class="fas fa-home"></i>
+    <i class="fas fa-home fa-2x" onclick="clickHome()"></i>
   </nav>
   <div class="container formularioResidentes">
     <div class="row justify-content-center">
